[package]
name = "holo"
version = "1.1.0"
edition = "2024"
description = "Simple HTTP server for local hosting"
repository = "https://github.com/krobbi/holo"
license = "MIT"
keywords = ["http", "localhost", "server", "tcp", "web"]
categories = [
  "command-line-utilities",
  "filesystem",
  "network-programming",
  "web-programming::http-server",
]
publish = false

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
percent-encoding = "2.3.2"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
